# DiSA-backend

./: .env  .gitignore  DiSA.postman_collection.json  README.md  alembic.ini  amclient_test.py  classes.py  disa.db  docker-compose.yml  exceptions.py  paperless.py  paperless_test.py  pyproject.toml  sam_client.py  security.py  start.py
alembic/: env.py
alembic/versions/: 1f04137ceed7_.py  2833ff4e875f_.py  2d1058b6847b_add_blockchain_to_database.py  3caf248a3e4f_.py  3da9d79e1a82_.py  58151073f4a6_.py  88fd9b16e507_.py  98a198a69927_.py  a6d04b7953ac_.py  b258395f0280_.py  bcfd0263ab8f_.py  df3e00fa43c2_.py
classes/: collection.py  commons.py  document.py  event.py  user.py
models/: collection.py  event.py  folder.py  paperless.py  update.py  user.py
paperless-ngx/: docker-compose.env  docker-compose.yml
paperless-ngx/code_parser/: apps.py  parsers.py  signals.py
routes/: collections.py  documents.py  users.py
src/: BlockchainService.py
storage/: collection.py  event.py  folder.py  main.py  models.py  paperless.py  user.py
storage/adapters/: paperless.py
test/: blockchain_test.py  test.db
test/routes/: collections_test.py
test/routes_test/: collections_test.py  documents_test.py  file_test.txt  users_test.py
test/utils/: blockchain_test.py
tmp/: Test Collection.tar
utils/: BlockchainService.py  paperless.py  security.py
