[tool.poetry]
name = "DiSA-backend"
version = "0.1.0"
description = ""
authors = ["Mycsina <andremacardoso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
amclient = "^1.3.0"
fastapi = "^0.110.0"
hypercorn = {extras = ["h3"], version = "^0.16.0"}
aioquic = "^0.9.25"
h3 = "^3.7.7"
web3 = "^6.15.1"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
